Prevent crash in setup if application data is not properly installed

HistogramWidget is old code taking a raw data pointer, thus is can crash when given a null pointer.
If application data is not properly installed, the DImg may be null

BUG: 284909